fixed play button position on safari

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  background: #222;
+  background: #222 no-repeat;
   background-image: url("./style/sunflowers.jpg");
   font-family: Verdana, Geneva, sans-serif;
   height: 100%;
