--- a/src/index.css
+++ b/src/index.css
@@ -15,21 +15,3 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
-
-@media screen {
-  div#preloader {
-    position: absolute;
-    left: -9999px;
-    top:  -9999px;
-  }
-  div#preloader img {
-    display: block;
-  }
-}
-@media print {
-  div#preloader,
-  div#preloader img {
-    visibility: hidden;
-    display: none;
-  }
-}
